# gcp-collection

./: .gitignore  README.md  cli.sh  techstack.md  techstack.yml
.github/workflows/: nodejs.yaml  python.yaml  wif.yaml
API/: README.md
AlloyDB/: README.md  hadr.md  network.md  pricing.md
ai/: applications.md
bigQuery/: README.md  SQL.md  bq.md  convention.md  cost-control.md  data-export.md  data-import.md  data-type.md  develop.md  table.md  time-travel.md  view.md
bigQuery/cli/: README.md  query.sh
bigQuery/cli/test/: expect.sql  input.sql
bigQuery/cli/translate/: run.sh  teradata.md
bigQuery/nodejs/: README.md  dataset.js  index.js  package.json  query.js
bigQuery/nodejs/local-test/: bq-migrate.js
bigQuery/nodejs/query/: build.js
bigQuery/nodejs/test/: bq.js  dataset.js  query.js
bigQuery/py/: README.md  pyproject.toml
bigQuery/py/common/: __init__.py
bigQuery/py/davidkhala/gcp/bq/: __init__.py
bigQuery/py/davidkhala/gcp/bq/export/: __init__.py
bigQuery/py/davidkhala/gcp/bq/migrate/: __init__.py  export.py  workflow.py
bigQuery/py/davidkhala/gcp/bq/migration/: __init__.py  workflow.py
bigQuery/py/davidkhala/gcp/bq/stream/: __init__.py  arrow.py
bigQuery/py/migrate/: workflow.py
bigQuery/py/tests/: bq_test.py  ci.py  core_test.py  migrate_test.py  stream_test.py
bigQuery/python/: README.md  pyproject.toml
bigQuery/python/common/: __init__.py
bigQuery/python/migrate/: create_migration_workflow.py  export.py  workflow.py
bigQuery/python/test/: migrate.py  migrate_test.py
bigQuery/query/: dev.md  translate.md
bigQuery/query/translate/: README.md
bq/: cost-control.md  data-import.md  quota.md  util.sh
bq/nodejs/: package.json
bq/nodejs/query/: build.js
bq/nodejs/test/: bq.js  dataset.js  index.js
bq/py/: .gitignore  pyproject.toml
bq/py/davidkhala/gcp/bq/migration/: workflow.py
bq/py/davidkhala/gcp/bq/stream/: __init__.py
bq/py/tests/: test_.py
bq/query/: DDL.md  sample.sql
bq/query/translate/: teradata.md
cli/: ADC.ps1  ADC.sh  README.md  cli.sh  gcloud-centos.sh  gcloud-darwin.sh  gcloud.ps1  gcloud.sh  gsutil.sh  init.sh  install.sh
cli/iam/: wif.sh
cli/region/: finder.sh
composer/: README.md
compute/: README.md
compute/cli/: gcloud.sh  iam.sh  instance.sh  vpc.sh
compute/nodejs/: .npmignore  metadata.js  package.json  region.js
compute/nodejs/local-test/: index.js
compute/nodejs/test/: index.js
data-fusion/: README.md
data/bricks/: README.md  price.md
data/flow/: README.md  price.md
data/fusion/: CDAP.md  README.md  price.md
data/proc/: README.md  driver.md
dataflow/: README.md  price.md
firestore/: README.md
go/: go.mod
k8s/: README.md  auto-scale.md
looker/: README.md
nodejs/: auth.js  client.js  index.js  package.json
nodejs/compute/: package.json  region.js
nodejs/compute/test/: index.js
nodejs/format/: auth.js  client.js  index.js  package.json
nodejs/format/local-test/: index.js
nodejs/format/test/: auth.js  index.js
nodejs/region/: api.js  cli.js  const.js  index.js
nodejs/test/: auth.js  region.js
pubsub/: README.md
pubsub/py/: README.md  pyproject.toml
pubsub/py/davidkhala/gcp/pubsub/: __init__.py  pub.py  sub.py
pubsub/py/tests/: test_.py
py/: README.md  pyproject.toml
py/davidkhala/gcp/: __init__.py
py/davidkhala/gcp/auth/: __init__.py  ci.py  options.py  service_account.py
py/davidkhala/gcp/core/: __init__.py
py/test/: auth.py
py/tests/: auth_test.py
py/tests/adc/: auth_test.py
repositories/: README.md  git.sh
run/: README.md
speech-to-text/: README.md
sql/: HADR.md
