[tool.poetry]
name = "khala-bq"
version = "0.0.0"
description = ""
authors = ["David Liu <david-khala@hotmail.com>"]
readme = "README.md"
packages = [{include = "migrate"}]

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-bigquery-migration = "^0.11.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
