[project]
name = "davidkhala.gcp.bq"
version = "0.0.0"
description = ""
authors = [{ name = "David Liu", email = "david-khala@hotmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "davidkhala-gcp",
    "google-cloud-bigquery",
]

[project.optional-dependencies]
migration = [
    "google-cloud-bigquery-migration",
    "davidkhala-utils",
]
stream = ["google-cloud-bigquery-storage[pyarrow, fastavro, pandas]"]

[dependency-groups]
dev = [
    "pytest",
    "davidkhala-gcp",
    "davidkhala-data-format[gcp, arrow]",
]

[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
