[project]
name = "davidkhala.gcp.pubsub"
version = "0.0.6"
description = "@davidkhala/gcp/pubsub"
authors = [{ name = "David Liu", email = "david-khala@hotmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "davidkhala-gcp",
    "google-cloud-pubsub",
]

[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
